--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ $footer-margin:   30px;
 $theme-background: white; 
 $theme-highlight: #ffc414; //yellow
 $theme-text: black;
-$theme-primary: #008fff; //blue
+$theme-primary: #005999; //#008fff; //blue
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
